api docs update

--- a/APIFolder/api.htm
+++ b/APIFolder/api.htm
@@ -2051,9 +2051,10 @@ Request Body:
         <div class="method-section">
             <div class="method-description">
                 <h4>List Loan Products</h4>
-                <p>Example Request: 
-                <a style="word-wrap: break-word;" href="https://localhost:8443/mifosng-provider/api/v1/loanproducts">https://localhost:8443/mifosng-provider/api/v1/loanproducts</a>
-                </p>
+                <p>Example Requests:</p> 
+                <a style="word-wrap: break-word;" href="https://localhost:8443/mifosng-provider/api/v1/loanproducts?pretty=true">https://localhost:8443/mifosng-provider/api/v1/loanproducts?pretty=true</a>
+                <br><br>
+                <a style="word-wrap: break-word;" href="https://localhost:8443/mifosng-provider/api/v1/loanproducts?pretty=true&fields=name,description">https://localhost:8443/mifosng-provider/api/v1/loanproducts?pretty=true&fields=name,description</a>
             </div>
             <div class="method-example">
                 <code class="method-declaration">GET https://thedomainname/api/v1/loanproducts</code>
