minor api docs update

--- a/APIFolder/api.htm
+++ b/APIFolder/api.htm
@@ -139,7 +139,7 @@
                 returned in all responses from the API, including errors.
                 </p>
                 <p>
-                Much of the presentation ideas here have been taken from the very good API reference (https://stripe.com/docs/api)
+                Much of the API presentation and design ideas are owed to the excellent <a href="http://info.apigee.com/Portals/62317/docs/web%20api.pdf">Apigee "Web API Design" eBook/PDF</a> and the very good <a href="https://stripe.com/docs/api">Stripe API reference</a>. 
                 </p>
             </div>
     
