api docs update

--- a/APIFolder/api.htm
+++ b/APIFolder/api.htm
@@ -646,7 +646,7 @@ Request Body:
  "lastname": "Yton", 
  "externalId": "786YYH7",
  "dateFormat": "dd MMMM yyyy", 
- "joiningDateFormatted": "04 March 2009"
+ "joiningDate": "04 March 2009"
 }
 </code>
 <code class="method-response">
@@ -668,12 +668,12 @@ Request Body:
 Content-Type: application/json
 Request Body:
 { 
- "externalId": "786UUUYYH7",
+ "externalId": "786444UUUYYH7",
  "dateFormat": "dd MMMM yyyy", 
- "joiningDateFormatted": "09 June 2006"
+ "joiningDate": "09 June 2006"
 }
 </code>
-<code class="method-response">{ "entityId": 2}</code>
+<code class="method-response">{ "entityId": 23}</code>
     </div>
 </div>
         
